assignment1/initial/target/main/mc/parser/MCParser.py
# Generated from main/mc/parser/MC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "';'", "','", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'int'", "'void'", "'boolean'", "'float'", "'string'", 
                     "'return'", "'break'", "'continue'", "'if'", "'else'", 
                     "'for'", "'while'", "'do'", "'+'", "'*'", "'!'", "'||'", 
                     "'!='", "'<'", "'<='", "'='", "'-'", "'%'", "'/'", 
                     "'&&'", "'=='", "'>'", "'>='" ]

    symbolicNames = [ "<INVALID>", "LB", "RB", "LSB", "RSB", "LP", "RP", 
                      "SEMI", "COMMA", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "INTTYPE", "VOIDTYPE", "BOOLEANTYPE", "FLOATTYPE", 
                      "STRINGTYPE", "RETURN", "BREAK", "CONTINUE", "IF", 
                      "ELSE", "FOR", "WHILE", "DO", "ADD_OP", "MUL_OP", 
                      "NOT_OP", "OR_OP", "NOT_EQUAL_OP", "LESS_OP", "LESS_EQUAL_OP", 
                      "ASSIGN_OP", "SUB_OP", "MODULUS_OP", "DIV_OP", "AND_OP", 
                      "EQUAL_OP", "GREATER_OP", "GREATER_EQUAL_OP", "INTLIT", 
                      "FLOATLIT", "BOOLLIT", "ID", "STRINGLIT", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_lit = 1
    RULE_primary_type = 2
    RULE_mctype = 3
    RULE_input_ptr_type = 4
    RULE_output_ptr_type = 5
    RULE_element = 6
    RULE_many_decls = 7
    RULE_decl = 8
    RULE_var_decl = 9
    RULE_many_vars = 10
    RULE_var = 11
    RULE_func_decl = 12
    RULE_list_params = 13
    RULE_param_decl = 14
    RULE_call_func = 15
    RULE_list_exprs = 16
    RULE_if_stmt = 17
    RULE_do_while_stmt = 18
    RULE_for_stmt = 19
    RULE_break_stmt = 20
    RULE_continue_stmt = 21
    RULE_return_stmt = 22
    RULE_expr_stmt = 23
    RULE_stmt = 24
    RULE_block_stmt = 25
    RULE_expr = 26
    RULE_expr1 = 27
    RULE_expr2 = 28
    RULE_expr3 = 29
    RULE_expr4 = 30
    RULE_expr5 = 31
    RULE_expr6 = 32
    RULE_expr7 = 33
    RULE_expr8 = 34
    RULE_expr9 = 35
    RULE_expr10 = 36

    ruleNames =  [ "program", "lit", "primary_type", "mctype", "input_ptr_type", 
                   "output_ptr_type", "element", "many_decls", "decl", "var_decl", 
                   "many_vars", "var", "func_decl", "list_params", "param_decl", 
                   "call_func", "list_exprs", "if_stmt", "do_while_stmt", 
                   "for_stmt", "break_stmt", "continue_stmt", "return_stmt", 
                   "expr_stmt", "stmt", "block_stmt", "expr", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "expr8", 
                   "expr9", "expr10" ]

    EOF = Token.EOF
    LB=1
    RB=2
    LSB=3
    RSB=4
    LP=5
    RP=6
    SEMI=7
    COMMA=8
    WS=9
    LINE_COMMENT=10
    BLOCK_COMMENT=11
    INTTYPE=12
    VOIDTYPE=13
    BOOLEANTYPE=14
    FLOATTYPE=15
    STRINGTYPE=16
    RETURN=17
    BREAK=18
    CONTINUE=19
    IF=20
    ELSE=21
    FOR=22
    WHILE=23
    DO=24
    ADD_OP=25
    MUL_OP=26
    NOT_OP=27
    OR_OP=28
    NOT_EQUAL_OP=29
    LESS_OP=30
    LESS_EQUAL_OP=31
    ASSIGN_OP=32
    SUB_OP=33
    MODULUS_OP=34
    DIV_OP=35
    AND_OP=36
    EQUAL_OP=37
    GREATER_OP=38
    GREATER_EQUAL_OP=39
    INTLIT=40
    FLOATLIT=41
    BOOLLIT=42
    ID=43
    STRINGLIT=44
    ILLEGAL_ESCAPE=45
    UNCLOSE_STRING=46
    ERROR_CHAR=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def many_decls(self):
            return self.getTypedRuleContext(MCParser.Many_declsContext,0)


        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def getRuleIndex(self):
            return MCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.many_decls()
            self.state = 75
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(MCParser.FLOATLIT, 0)

        def BOOLLIT(self):
            return self.getToken(MCParser.BOOLLIT, 0)

        def STRINGLIT(self):
            return self.getToken(MCParser.STRINGLIT, 0)

        def getRuleIndex(self):
            return MCParser.RULE_lit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLit" ):
                return visitor.visitLit(self)
            else:
                return visitor.visitChildren(self)




    def lit(self):

        localctx = MCParser.LitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.BOOLLIT) | (1 << MCParser.STRINGLIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primary_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEANTYPE(self):
            return self.getToken(MCParser.BOOLEANTYPE, 0)

        def INTTYPE(self):
            return self.getToken(MCParser.INTTYPE, 0)

        def FLOATTYPE(self):
            return self.getToken(MCParser.FLOATTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MCParser.STRINGTYPE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_primary_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimary_type" ):
                return visitor.visitPrimary_type(self)
            else:
                return visitor.visitChildren(self)




    def primary_type(self):

        localctx = MCParser.Primary_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_primary_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.STRINGTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MctypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary_type(self):
            return self.getTypedRuleContext(MCParser.Primary_typeContext,0)


        def VOIDTYPE(self):
            return self.getToken(MCParser.VOIDTYPE, 0)

        def output_ptr_type(self):
            return self.getTypedRuleContext(MCParser.Output_ptr_typeContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_mctype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMctype" ):
                return visitor.visitMctype(self)
            else:
                return visitor.visitChildren(self)




    def mctype(self):

        localctx = MCParser.MctypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mctype)
        try:
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.primary_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.match(MCParser.VOIDTYPE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.output_ptr_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_ptr_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary_type(self):
            return self.getTypedRuleContext(MCParser.Primary_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_input_ptr_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput_ptr_type" ):
                return visitor.visitInput_ptr_type(self)
            else:
                return visitor.visitChildren(self)




    def input_ptr_type(self):

        localctx = MCParser.Input_ptr_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_input_ptr_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.primary_type()
            self.state = 87
            self.match(MCParser.ID)
            self.state = 88
            self.match(MCParser.LSB)
            self.state = 89
            self.match(MCParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Output_ptr_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary_type(self):
            return self.getTypedRuleContext(MCParser.Primary_typeContext,0)


        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_output_ptr_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput_ptr_type" ):
                return visitor.visitOutput_ptr_type(self)
            else:
                return visitor.visitChildren(self)




    def output_ptr_type(self):

        localctx = MCParser.Output_ptr_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_output_ptr_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.primary_type()
            self.state = 92
            self.match(MCParser.LSB)
            self.state = 93
            self.match(MCParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_element

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = MCParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(MCParser.ID)
            self.state = 96
            self.match(MCParser.LSB)
            self.state = 97
            self.match(MCParser.INTLIT)
            self.state = 98
            self.match(MCParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_declsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_many_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_decls" ):
                return visitor.visitMany_decls(self)
            else:
                return visitor.visitChildren(self)




    def many_decls(self):

        localctx = MCParser.Many_declsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_many_decls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 100
                self.decl()
                self.state = 103 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.VOIDTYPE) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.STRINGTYPE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MCParser.Var_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MCParser.Func_declContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_decl)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.func_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary_type(self):
            return self.getTypedRuleContext(MCParser.Primary_typeContext,0)


        def many_vars(self):
            return self.getTypedRuleContext(MCParser.Many_varsContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MCParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.primary_type()
            self.state = 110
            self.many_vars()
            self.state = 111
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_varsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VarContext)
            else:
                return self.getTypedRuleContext(MCParser.VarContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_many_vars

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_vars" ):
                return visitor.visitMany_vars(self)
            else:
                return visitor.visitChildren(self)




    def many_vars(self):

        localctx = MCParser.Many_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_many_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.var()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 114
                self.match(MCParser.COMMA)
                self.state = 115
                self.var()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def element(self):
            return self.getTypedRuleContext(MCParser.ElementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = MCParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_var)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.element()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mctype(self):
            return self.getTypedRuleContext(MCParser.MctypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def list_params(self):
            return self.getTypedRuleContext(MCParser.List_paramsContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(MCParser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = MCParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.mctype()
            self.state = 126
            self.match(MCParser.ID)
            self.state = 127
            self.match(MCParser.LB)
            self.state = 128
            self.list_params()
            self.state = 129
            self.match(MCParser.RB)
            self.state = 130
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_paramsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Param_declContext)
            else:
                return self.getTypedRuleContext(MCParser.Param_declContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_list_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_params" ):
                return visitor.visitList_params(self)
            else:
                return visitor.visitChildren(self)




    def list_params(self):

        localctx = MCParser.List_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_list_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.STRINGTYPE))) != 0):
                self.state = 132
                self.param_decl()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MCParser.COMMA:
                    self.state = 133
                    self.match(MCParser.COMMA)
                    self.state = 134
                    self.param_decl()
                    self.state = 139
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary_type(self):
            return self.getTypedRuleContext(MCParser.Primary_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def input_ptr_type(self):
            return self.getTypedRuleContext(MCParser.Input_ptr_typeContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_param_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_decl" ):
                return visitor.visitParam_decl(self)
            else:
                return visitor.visitChildren(self)




    def param_decl(self):

        localctx = MCParser.Param_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_param_decl)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.primary_type()
                self.state = 143
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.input_ptr_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Call_funcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def list_exprs(self):
            return self.getTypedRuleContext(MCParser.List_exprsContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_call_func

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall_func" ):
                return visitor.visitCall_func(self)
            else:
                return visitor.visitChildren(self)




    def call_func(self):

        localctx = MCParser.Call_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_call_func)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(MCParser.ID)
            self.state = 149
            self.match(MCParser.LB)
            self.state = 150
            self.list_exprs()
            self.state = 151
            self.match(MCParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_exprsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ExprContext)
            else:
                return self.getTypedRuleContext(MCParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)
